# Final-Programming

./: .env.example  .gitignore  README.md  clusters.json  eda_young_people_survey.ipynb  exploratory_data_analysis.ipynb  kmeans_model.pkl  main.py  pyproject.toml  questions.json  requirements.txt  scaler.pkl  survey_traits.json
resources/: personality_factors.json  prompt_tenets.txt
