[project]
name = "final-project"
version = "0.1.0"
description = "EXploratory data analysis of the Young People Survey dataset."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "factor-analyzer>=0.5.1",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.0",
    "kagglehub>=0.3.13",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "umap-learn>=0.5.9.post2",
    "widgetsnbextension>=4.0.15",
]
