[project]
name = "final-project"
version = "0.1.0"
description = "Streamlit app for recommending stocks based on personality survey."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "finnhub-python>=2.4.26",
    "langchain>=1.1.3",
    "langchain-core>=1.1.3",
    "langchain-openai>=1.1.2",
    "langchain-tavily>=0.2.13",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
    "streamlit-float>=0.4.0",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.251201",
]
